[package]
name = "runes-dex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
anyhow = "1.0.81"
bitcoin = { version = "0.30.1", features = ["rand"] }
ord-bitcoincore-rpc = "0.17.2"
#bitcoincore-rpc = "0.18.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
log = { version = "0.4.21", features = ["kv", "std", "serde", "kv_serde"] }
#ordinals = "0.0.6"
ordinals = { git = "https://github.com/ordinals/ord.git" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tokio-util = { version = "0.7.10", features = ["full"] }
chrono = { version = "0.4.37", features = ["serde"] }
hex = "0.4.3"
csv = "1.3.0"
rand = "0.8.5"
bip39 = "2.0.0"
rust-embed = { version = "8.3.0", features = ["actix", "actix-web", "mime-guess"] }
mime_guess = "2.0.4"
redis = { version = "0.25.3", features = ["json", "tokio-comp", "tokio-native-tls"] }
awc = { version = "3.4.0", features = ["rustls"] }
base64 = "0.22.1"
ulid = { version = "1.1.2", features = ["serde", "postgres"] }
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript.git",  features = ["base64"] }
##miniscript = { version = "11.0.0", features = ["base64"] }


#[patch."https://github.com/ordinals/ord"]
#ordinals = { path = "../ord/crates/ordinals" }
